# yt-watcher

./: .gitignore  Containerfile  LICENSE  README.md  compose.yaml  pyproject.toml
.github/workflows/: ci.yaml  release-image.yaml
src/yt_watcher/: __init__.py  __main__.py  cli.py  config.py  db.py  downloader.py  naming.py  nfo.py  poller.py
tests/: conftest.py  test_cli.py  test_db.py  test_downloader.py  test_naming.py  test_nfo.py  test_poller_diff.py
tests/golden/: musicvideo.nfo  musicvideo_escaping.nfo
tests/integration/: test_live_playlist.py
